# django-check-admin

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  test.yml
checkadmin/: __init__.py  apps.py  checks.py
tests/: admin.py  models.py  settings.py  tests.py
