[metadata]
name = django-check-admin
version = 1.0.0
description = A Django app to check that all models have been added to the Django admin site.
long_description = file: README.rst
url = https://github.com/jdufresne/django-check-admin
author = Jon Dufresne
author_email = jon.dufresne@gmail.com
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
install_requires =
    Django >= 2.2
packages =
    checkadmin

[flake8]
max-line-length = 88

[isort]
profile = black
